--- a/nginx/index.html
+++ b/nginx/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>hello, world</title>
+    <title>I Love Piggy!</title>
   </head>
   <body>
-    <p>hello, world</p>
-    <p>Additional text</p>
+    <p>hello, bubu</p>
+    <p>I hate Arch linux and Steam Deck</p>
   </body>
 </html>
