--- a/nginx/index.html
+++ b/nginx/index.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <p>hello, world</p>
-    <p>additional text</p>
+    <p>This site is deployed on an EC2 instance using Docker</p>
+    <p>Jenkins pipeline allows for changes made on the main branch to be deployed quickly.</p>
+    <p>Code available on <a href="https://github.com/tassavarat/jenkins-pipeline">GitHub</a>.</p>
   </body>
 </html>
