--- a/nginx/index.html
+++ b/nginx/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>hello, world</title>
+    <title>Hello, world</title>
   </head>
   <body>
-    <p>hello, world</p>
+    <p>Hello, world</p>
     <p>This site is deployed on an EC2 instance using Docker</p>
-    <p>Jenkins pipeline allows for changes made on the main branch to be deployed quickly.</p>
-    <p>Code available on <a href="https://github.com/tassavarat/jenkins-pipeline">GitHub</a>.</p>
+    <p>Jenkins pipeline allows for changes made on the main branch to be deployed quickly</p>
+    <p>Code available on <a href="https://github.com/tassavarat/jenkins-pipeline">GitHub</a></p>
   </body>
 </html>
